tests/reference/asr-common1-bbe229a.stderr
semantic error: Duplicate DIMENSION attribute specified
 --> tests/errors/common1.f90:3:12
  |
3 |     common /rowns/ rowns(209)
  |            ^^^^^^^^^^^^^^^^^^ 
